fix for string.formatted inconsistency