@@ -196,7 +196,7 @@ public class TestDocumentSubmissionScreen extends JFrame implements ActionListen
                         fileChooser.getSelectedFile().getAbsolutePath()
                         );
                 this.setVisible(false);
-                JOptionPane.showMessageDialog(this, "%s Successfully Uploaded".formatted(name.getText()));
+                JOptionPane.showMessageDialog(this, String.format("%s Successfully Uploaded", name.getText()));
             } catch (Exception e) {
                 JOptionPane.showMessageDialog(this, e.getMessage());
             }
