@@ -94,7 +94,7 @@ public class UpdateCourseMembershipScreen extends JFrame implements ActionListen
             System.out.println(coursesToAdd);
             updateCourseMembershipController.registerCourse(userID, coursesToAdd);
             this.setVisible(false);
-            JOptionPane.showMessageDialog(this, "%s Successfully Uploaded".formatted(courseDisplayString));
+            JOptionPane.showMessageDialog(this, String.format("%s Successfully Uploaded", courseDisplayString));
         } catch (Exception e) {
             JOptionPane.showMessageDialog(this, e.getMessage());
         }
